# capybara

./: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  dummy.html  index.html  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  config.rs  hotkey.rs  main.rs  ocr.rs  selection.rs  text.rs  tray.rs  user.rs  utils.rs  windows.rs
src/api/: analyze.ts  request.ts  translate.ts  user.ts
src/api/types/: index.ts
src/components/: CollapsePanel.tsx  MenuItem.tsx  SwapIcon.tsx
src/components/Icon/: AboutIcon.tsx  ClipboardIcon.tsx  CloseIcon.tsx  CopyIcon.tsx  InputIcon.tsx  KeyboardIcon.tsx  PencilIcon.tsx  PinFillIcon.tsx  PinIcon.tsx  RechargeIcon.tsx  ScreenshotIcon.tsx  SettingIcon.tsx  UserIcon.tsx  WinCloseIcon.tsx
src/container/: App.tsx
src/container/Config/: About.tsx  Keyboard.tsx  Recharge.tsx  User.tsx  index.tsx
src/container/Screenshot/: index.tsx
src/container/Translator/: Header.tsx  index.tsx
src/hooks/: useAppInfo.tsx  useConfig.tsx  useGetState.tsx
src/utils/: env.ts  index.ts  language.ts  store.ts
