[package]
name = "CapyAssist"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "global-shortcut-all", "window-minimize", "window-set-always-on-top", "clipboard-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.17.1"
parking_lot = "0.12.1"
sysinfo = "0.28.3"
mouse_position = "0.1.3"
dirs = "5.0.1"
log = "^0.4"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
