[package]
name = "CapyAssist"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "protocol-asset", "path-all", "global-shortcut-all", "clipboard-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
selection = "1.1.1"
serde_json = "1"
once_cell = "1.17.1"
parking_lot = "0.12.1"
sysinfo = "0.28.3"
mouse_position = "0.1.3"
dirs = "5.0.1"
log = "^0.4"
screenshots = "0.7.2"
image = "0.24.7"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [ "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Foundation_Collections", "Globalization", "Storage", "Storage_Streams" ] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
